#update thm-nganh

--- a/Areas/Admin/Views/Nganhs/Create.cshtml
+++ b/Areas/Admin/Views/Nganhs/Create.cshtml
@@ -18,8 +18,7 @@
         </div>
     </div>
 </header>
-@using (Html.BeginForm())
-{
+
     <div class="container-fluid px-12">
         <div class="card card-header-actions">
             <div class="card-header">
@@ -100,49 +99,25 @@
                         <div class="card card-header-actions mt-1 mb-1 ">
                             <div class="card-header">Tổ hợp môn xét tuyển của ngành</div>
                             <div class="card-body">
-                                <table class="table table-striped table-hover">
-                                    <tr>
-                                        <td>A01</td>
-                                        <td>Toán Lý T.Anh</td>
-                                        <td style="width:80px">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>A02</td>
-                                        <td>Toán Lý Sinh</td>
-                                        <td>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>B03</td>
-                                        <td>Toán Sinh Văn</td>
-                                        <td>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>C00</td>
-                                        <td>Văn Sử Địa</td>
-                                        <td>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                <label class="form-check-label" for="flexCheckDefault"> Chọn </label>
-                                            </div>
-                                        </td>
-                                    </tr>
-
+                                <table id="tableToHopMon" class="table table-striped table-hover table-sm">
+                                    <tbody id="infoList">
+                                    </tbody>
                                 </table>
+                                <button  onclick="check()"> check </button>
+
+                                <nav>
+                                    <ul class="pagination justify-content-center" style="margin-top:0px; margin-bottom:0px">
+                                        <li class="page-item disabled">
+                                            <a class="page-link small prev" href="#" tabindex="-1">Trước</a>
+                                        </li>
+                                        <li class="page-item">
+                                            <a class="page-link small" id="present_on" href="#"></a>
+                                        </li>
+                                        <li class="page-item">
+                                            <a class="page-link small next" href="#">Sau</a>
+                                        </li>
+                                    </ul>
+                                </nav>
                             </div>
                         </div>
                     </div>
@@ -151,7 +126,8 @@
                     <hr class="mt-1 mb-1" />
                     <div class="col-md-2 col-3">
                         @*<input type="submit" value="Create" class="btn btn-default" />*@
-                        <input class="btn btn-outline-success" type="submit" value="Đồng ý" style="width:100%" />
+                        @*<input class="btn btn-outline-success" type="submit" value="Đồng ý" style="width:100%" />*@
+                        <button onclick="submitForm()"> submitForm </button>
                     </div>
                     <div class="col-md-2 col-3">
                         @Html.ActionLink("Hủy bỏ", "Index", null, new { @class = "btn btn-outline-danger", @style = "width:100%; white-space:nowrap" })
@@ -160,8 +136,189 @@
             </div>
         </div>
     </div>
-}
 
+<script>
+    $('document').ready(function () {
+        var selectedValues = [];
+
+       
+
+        console.log(selectedValues);
+        
+
+
+
+
+
+        var selected = [];
+        $.each($("input[name='InputTHM']:checked"), function () {
+            selected.push($(this).val());
+            cconsole.log("Check")
+        });
+        let checkedRows = [];
+        $('#tableToHopMon tbody tr').each(function () {
+            var checkbox = $(this).find("input[type='checkbox']");
+            if (checkbox.is(":checked")) {
+                var row = $(this).find("td").map(function () {
+                    return $(this);
+                }).get();
+                console.log(row)
+                checkedRows.push(row);
+            }
+        });
+
+        loadData()
+        var itemsPerPage = 4; // Number of items to display per page
+        var currentPage = 1; // Current page
+        var present_on = document.getElementById("present_on");
+        present_on.innerHTML = 1;
+        // Hide all rows except the ones for the current page
+        function showRows() {
+            var startIndex = (currentPage - 1) * itemsPerPage;
+            var endIndex = startIndex + itemsPerPage;
+
+            $(".table tbody tr").hide().slice(startIndex, endIndex).show();
+        }
+
+        // Handle next page click event
+        $(".next").on("click", function (e) {
+            e.preventDefault();
+            currentPage++;
+            present_on.innerHTML = currentPage;
+            showRows();
+            updatePaginationState();
+        });
+
+        // Handle previous page click event
+        $(".prev").on("click", function (e) {
+            e.preventDefault();
+            if (currentPage > 1) {
+                currentPage--;
+                present_on.innerHTML = currentPage;
+                showRows();
+                updatePaginationState();
+            }
+        });
+
+        
+
+        // Update pagination state based on current page
+        function updatePaginationState() {
+            var totalPages = Math.ceil($(".table tbody tr").length / itemsPerPage);
+
+            if (currentPage === 1) {
+                $(".prev").parent().addClass("disabled");
+            } else {
+                $(".prev").parent().removeClass("disabled");
+            }
+
+            if (currentPage === totalPages) {
+                $(".next").parent().addClass("disabled");
+            } else {
+                $(".next").parent().removeClass("disabled");
+            }
+        }
+
+        // Show initial page of rows
+        showRows();
+        updatePaginationState();
+
+        // Xử lý check box
+
+
+    })
+    function check() {
+        var checkboxes = document.querySelectorAll('input[name="checkboxTHM"]');
+        var selectedValues = [];
+        for (var i = 0; i < checkboxes.length; i++) {
+            if (checkboxes[i].checked) {
+                selectedValues.push(checkboxes[i].id);
+            }
+            console.log(selectedValues,'selectedValues')
+        }
+    }
+    function loadData() {
+        $.ajax({
+            url: "/Admin/Nganhs/getAllToHopMon",
+            type: "GET",
+            contentType: "application/json;charset=utf-8",
+            success: function (response) {
+                if (response.success) {
+                    let htmlString = "";
+                    let tohopmons = response.tohops;
+                    let count = 0;
+                    $.each(tohopmons, function (i, result) {
+                        if (result.Thm_ID > 0) {
+                            htmlString += '<tr>' +
+                                '<td style="vertical-align: middle !important ">' + result.Thm_MaToHop + "&nbsp;" + ' </td> ' +
+                                '<td style="vertical-align: middle !important "> ' + result.Thm_TenToHop + ' </td>' +
+                                '<td style="width:80px"><div class="form-check"><input name="checkboxTHM" class="form-check-input" type="checkbox" value="' + result.Thm_ID + '" id="' + result.Thm_ID + '"><label class="form-check-label" for="flexCheckDefault"> Chọn </label></div></td>' +
+                                '</tr>'
+                        }
+                    });
+                    document.getElementById('infoList').innerHTML = htmlString;
+                    var startIndex = 0;
+                    var endIndex = startIndex + 4;
+                    $(".table tbody tr").hide().slice(startIndex, endIndex).show();
+                } else {
+                }
+            },
+            error: function (xhr, status, error) {
+                // Handle any errors
+                console.error(error);
+            }
+        });
+    }
+
+    function submitForm() {
+        $(".text-danger").text("");
+        let flag = true;
+        let Thm_MaToHop = $('#Thm_MaToHop').val();
+        let Thm_Mon1 = $('#Thm_Mon1').val();
+        let Thm_Mon2 = $('#Thm_Mon2').val();
+        let Thm_Mon3 = $('#Thm_Mon3').val();
+        let Thm_TenToHop = $('#Thm_TenToHop').val();
+
+        if (!Thm_MaToHop) {
+            var errorMessage = "Vui lòng nhập mã tổ hợp";
+            $('#Thm_MaToHop_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!Thm_Mon1) {
+            var errorMessage = "Vui lòng nhập môn 1";
+            $('#Thm_Mon1_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!Thm_Mon2) {
+            var errorMessage = "Vui lòng nhập môn 2";
+            $('#Thm_Mon2_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!Thm_Mon3) {
+            var errorMessage = "Vui lòng nhập môn 3";
+            $('#Thm_Mon2_Error').text(errorMessage);
+            flag = false;
+        }
+        if (!flag) return;
+        $("#loadingModal").modal("show");
+
+        let checkedRows = [];
+        $('#tableNganh tbody tr').each(function () {
+            var checkbox = $(this).find("input[type='checkbox']");
+
+            if (checkbox.is(":checked")) {
+                var row = $(this).find("td").map(function () {
+                    return $(this);
+                }).get();
+
+                checkedRows.push(row);
+            }
+        });
+        console.log(checkedRows, 'checkedRows')
+        return;
+    }
+
+</script>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
